Dashboard UI imnprovements - unicode icons

--- a/FinanceTrackerApp/Components/Pages/EditTransaction.razor
+++ b/FinanceTrackerApp/Components/Pages/EditTransaction.razor
@@ -36,6 +36,7 @@
                     <input type="date" class="input" @bind="editTx.Date" />
                 </div>
 
+            <!-- Conditional Categories -->
                 <div class="field">
                     <label>Category</label>
                     @if (editTx.Type == "expense")
