--- a/FinanceTrackerApp/Components/Pages/AddTransaction.razor
+++ b/FinanceTrackerApp/Components/Pages/AddTransaction.razor
@@ -30,6 +30,7 @@
                 <input type="date" class="input" @bind="newTx.Date" />
             </div>
 
+            <!-- Conditional Categories -->
             <div class="field">
                 <label>Category</label>
                 @if (newTx.Type == "expense")
